--- a/framework/less/forms.less
+++ b/framework/less/forms.less
@@ -114,7 +114,7 @@ label.atk-input-label {
 }
 .atk-input-radio {
     padding-top: 0.5em;
-    .atk-form-stacked &, &.atk-input-radio-stacked {
+    .atk-form-stacked &, &.atk-input-radio-stacked, &[data-layout='stacked'] {
         padding-top: 0;
     }
     span {
@@ -128,9 +128,10 @@ label.atk-input-label {
             .position(relative, -0.05em);
         }
     }
-    &.atk-input-radio-stacked {
+    &.atk-input-radio-stacked, &[data-layout='stacked'] {
         span {
             display: block;
+            margin-right: 0;
         }
     }
 }
