Border thickness fix.

--- a/framework/less/components.less
+++ b/framework/less/components.less
@@ -791,6 +791,14 @@ ul[class*=atk-menu] {
 .atk-padding-bottom-reset {
     padding-bottom: 0;
 }
+.atk-padding-horizontal-reset {
+    padding-left: 0;
+    padding-right: 0;
+}
+.atk-padding-vertical-reset {
+    padding-bottom: 0;
+    padding-top: 0;
+}
 
 
 // Shapes
