--- a/framework/less/misc.less
+++ b/framework/less/misc.less
@@ -63,13 +63,13 @@ body {
 *[class*=atk-border-outline] {
     &, &[class*=atk-swatch]:not(.atk-text-inherit), &[class*=atk-box], &[class*=atk-button] {
         background: none;
-        border-width: 0.1em !important;
+        border-width: 1px !important;
         border-style: solid;
         &.atk-border-outline-small {
-            border-width: 0.05em !important;
+            border-width: 0.5px !important;
         }
         &.atk-border-outline-large {
-            border-width: 0.15em !important;
+            border-width: 2px !important;
         }
     }
 }
